# expansao360

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  GLOSSARIO.md  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  STATUS.md  _env_dump.yml  _pip_dump.txt  conftest.py  docker-compose.yml  environment.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
DECISIONS/: README.md
DECISIONS/architecture/: ADR-001-registry-vs-operation.md  ADR-004-repositorio-stack-agnostic.md  ADR-005-stack-web-django.md  ADR-020-web-como-adapter.md  ADR-059-criar-app-chamados.md  ADR-060-boundary-chamados-vs-execucao.md  ADR-061-postgresql-banco-padrao-desenvolvimento.md  ADR-062-fonte-de-verdade-dependencias.md
DECISIONS/domain/: ADR-006-nomenclatura-ptbr-no-dominio.md  ADR-007-entidade-chamado-substitui-card.md  ADR-017-classificacao-equipamentos-rastreaveis-contaveis.md  ADR-026-introducao-subprojetos-registry.md  ADR-028-padronizacao-logomarca-lojas.md  ADR-029-refinamento-cadastro-equipamentos-registry.md  ADR-031-codigo-equipamento-automatico.md  ADR-032-tipoequipamento-cadastro-mestre-por-categoria.md  ADR-033-codigos-internos-vs-externos.md  ADR-034-cadastro-mestre-kit-kititem.md  ADR-035-instalacaoitem-fk-tipoequipamento.md  ADR-036-tipoequipamento-governado-por-categoria.md  ADR-058-separacao-dominio-chamado-do-app-execucao.md
DECISIONS/execucao/: ADR-008-configuracao-ip-decisao-do-chamado.md  ADR-009-gate-nf-e-fechamento-chamado.md  ADR-010-ciclo-de-vida-prioridade-ticket.md  ADR-011-separacao-abertura-fila.md  ADR-013-status-em-abertura.md  ADR-021-imutabilidade-chamado-retornos.md  (+7 more)
docs/: DEPENDENCIAS.md  DEPENDENCIAS_FRONTEND.md  README.md  REDE-GRUPOS.md  TODO_ARQUITETURAL_REDES.md
expansao360/: __main__.py  cli.py
tests/: test_ci_requires_postgres.py  test_registry_location.py  test_usecase_register_location.py  test_usecase_register_mount.py  test_usecase_register_mount_with_repo.py
web/: manage.py
web/iam/: admin.py  (+9 more)
(+388 files in other folders)
