[project]
name = "expansao360"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-django>=4.8",
  "pytest-cov>=5",
  'psycopg[binary]>=3.2',
]
dev = [
  "black>=24",
  "ruff>=0.6",
  "pre-commit>=3.7",
  "deptry>=0.16",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["web"]